<?xml version="1.0"?>
<package>
  <name>enshu_20151104</name>
  <version>0.0.0</version>
  <description>The enshu_20151104 package</description>

  <maintainer email="k-okada@todo.todo">k-okada</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roseus</build_depend>
  <build_depend>jsk_recognition</build_depend>
  <build_depend>image_view2</build_depend>


  <run_depend>roseus</run_depend>
  <run_depend>jsk_recognition</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
